# components-registry-service-server/src/main/kotlin/org/octopusden/octopus/components/registry/server/mapper/V4Mappers.kt
@@ -51,7 +51,7 @@ fun ComponentEntity.toDetailResponse(teamcityBaseUrl: String? = null): Component
         displayName = this.displayName,
         componentOwner = this.componentOwner,
         productType = this.productType,
-        system = this.systemCode,
+        systems = this.systemJunctions.map { it.systemCode }.toSet(),
         clientCode = this.clientCode,
         archived = this.archived,
         solution = this.solution,
@@ -108,7 +108,7 @@ fun ComponentEntity.toSummaryResponse(teamcityBaseUrl: String? = null): Componen
         name = this.componentKey,
         displayName = this.displayName,
         componentOwner = this.componentOwner,
-        system = this.systemCode,
+        systems = this.systemJunctions.map { it.systemCode }.toSet(),
         productType = this.productType,
         archived = this.archived,
         canBeParent = this.canBeParent,
