# components-registry-service-server/src/main/resources/openapi/v4.json
@@ -544,8 +544,12 @@
           "solution" : {
             "type" : "boolean"
           },
-          "system" : {
-            "type" : "string"
+          "systems" : {
+            "items" : {
+              "type" : "string"
+            },
+            "type" : "array",
+            "uniqueItems" : true
           },
           "teamcityProjects" : {
             "items" : {
@@ -671,8 +675,12 @@
           "solution" : {
             "type" : "boolean"
           },
-          "system" : {
-            "type" : "string"
+          "systems" : {
+            "items" : {
+              "type" : "string"
+            },
+            "type" : "array",
+            "uniqueItems" : true
           },
           "teamcityProjects" : {
             "items" : {
@@ -705,6 +713,7 @@
           "securityChampion",
           "securityGroups",
           "skipCommitCheck",
+          "systems",
           "teamcityProjects",
           "version"
         ],
@@ -846,8 +855,12 @@
             },
             "type" : "array"
           },
-          "system" : {
-            "type" : "string"
+          "systems" : {
+            "items" : {
+              "type" : "string"
+            },
+            "type" : "array",
+            "uniqueItems" : true
           },
           "teamcityProjectId" : {
             "type" : "string"
@@ -870,7 +883,8 @@
           "labels",
           "name",
           "releaseManagers",
-          "securityChampions"
+          "securityChampions",
+          "systems"
         ],
         "type" : "object"
       },
@@ -989,8 +1003,12 @@
           "solution" : {
             "type" : "boolean"
           },
-          "system" : {
-            "type" : "string"
+          "systems" : {
+            "items" : {
+              "type" : "string"
+            },
+            "type" : "array",
+            "uniqueItems" : true
           },
           "teamcityProjects" : {
             "items" : {
